--- a/Banker's Plan.ipynb
+++ b/Banker's Plan.ipynb
@@ -60,24 +60,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "def fortune(f0, p, c0, n, i):\n",
-    "    for t in range(n):\n",
-    "        f0 = f0 + f0*p/100 - c0\n",
-    "        c0 += c0*i/100\n",
+    "    for t in range(n-1):\n",
+    "        f0 = int(f0 + f0*p/100 - c0)\n",
+    "        c0 = int(c0+c0*i/100)\n",
+    "        \n",
     "    if f0>=0 :\n",
     "        return True\n",
-    "    else :\n",
-    "        return False\n",
-    "    pass"
+    "    else:\n",
+    "        return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -95,13 +95,13 @@
        "True"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(fortune(100000, 1, 9185, 12, 1))\n",
+    "print(fortune(-100000, 1, -9185, 12, 1))\n",
     "print(fortune(100000, 1, 10000, 10, 1))\n",
     "print(fortune(100000, 1, 2000, 15, 1))\n",
     "fortune(100000000, 5, 1000000, 50, 1)"
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -118,15 +118,35 @@
      "text": [
       "0\n",
       "1\n",
-      "2\n",
-      "3\n"
+      "2\n"
      ]
     }
    ],
    "source": [
     "i =4 \n",
-    "for t in range(i):\n",
+    "for t in range(i-1):\n",
     "    print(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def fortune(f0,p,c0,n,i):\n",
+    "    "
    ]
   },
   {
