--- a/Encrypt this!.ipynb
+++ b/Encrypt this!.ipynb
@@ -28,6 +28,24 @@
     "    \n",
     "    return result[:-1]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.remove"
+   ]
   }
  ],
  "metadata": {
