--- a/RGB To Hex Conversion.ipynb
+++ b/RGB To Hex Conversion.ipynb
@@ -32,6 +32,7 @@
     "            i = 255\n",
     "        if i < 0:\n",
     "            i = 0\n",
+    "            \n",
     "        i = hex(i)[2:4]\n",
     "        if len(i) == 1:\n",
     "            i = \"0\"+ i\n",
@@ -41,22 +42,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'ff'"
+       "'0xff'"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hex(255)[2:4]"
+    "hex(255)"
    ]
   },
   {
