--- a/Find the unique number.ipynb
+++ b/Find the unique number.ipynb
@@ -31,6 +31,7 @@
     "        if arr[0] == arr[2]:\n",
     "            return arr[1]\n",
     "        else:\n",
+    "            return arr[0]\n",
     "        \n",
     "    else:\n",
     "        for i in range(len(arr)-1):\n",
