--- a/checkContinuous().ipynb
+++ b/checkContinuous().ipynb
@@ -6,13 +6,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def largestPower(n):\n",
-    "    i = 0\n",
-    "    while True:\n",
-    "        if n ==\n",
+    "def checkContinuous(target):\n",
+    "    continuous_count = 0\n",
     "    \n",
-    "    return"
+    "    for i in range(len(target) - 1):\n",
+    "        if target[i] == target[i + 1]:\n",
+    "            continuous_count += 1\n",
+    "    return continuous_count"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "스트링의 연속되는 str 확인"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
